Keyboard and Video I/O work.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,4 +1,4 @@
-CFLAGS+=-I.. -fPIC
+CFLAGS+=-I..
 
 .PHONY: clean
 
@@ -6,6 +6,9 @@ all: main
 
 hashtable.o: hashtable.c hashtable.h ../cobj.h
 	$(CC) -c $(CFLAGS) -o $@ $<
+
+hashtable_dyn.o: hashtable.c hashtable.h ../cobj.h
+	$(CC) -c $(CFLAGS) -fPIC -o $@ $<
 
 main.o: main.c hashtable.h ../cobj.h
 	$(CC) -c $(CFLAGS) -o $@ $<
